Safari365 Prod/src/objects/Consultant_Target_Monthly__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_Gross_Profit_Target_Achieved__c</fullName>
        <label>Consultant Gross Profit Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Gross_Profit_Target__c</fullName>
        <label>Consultant Convsersion Ratio Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consultant_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Level</label>
        <referenceTo>Consultant_Target_Schema__c</referenceTo>
        <relationshipName>Consultant_Target_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant_Target_Yearly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant GP Target (Annual)</label>
        <referenceTo>Consultant_Target_Yearly__c</referenceTo>
        <relationshipName>Consultant_Target_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultant_Target_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Target__c</fullName>
        <label>Consultant Gross Profit Target</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Target_To_Be_Achieved__c</fullName>
        <formula>Gross_Profit_Target__c - Consultant_Gross_Profit_Target_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Target To Be Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunity__c</fullName>
        <label>No of Opportunity Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a consultant has just started with Safari365 (or is a trainee in forst 3 months) this allows for a staggered ( 25%, 50%, 75% etc) lead-in of the normal monthly target for the initial 3 months.</inlineHelpText>
        <label>Override Monthly GP Required (Lead-In)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>consultantIdAndYearKey__c</fullName>
        <formula>CASESAFEID(Consultant__r.Id)+TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>consultantIdAndYearKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_GP_Target_Achieved_Monthly__c</fullName>
        <formula>Consultant_Gross_Profit_Target_Achieved__c /  Gross_Profit_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of GP Target Achieved (Monthly)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Individual Cons. GP Setup (Monthly)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Consultant_Role__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Consultant_Gross_Profit_Target_Achieved__c</columns>
        <columns>Gross_Profit_Target__c</columns>
        <columns>of_GP_Target_Achieved_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTM-{00000000}</displayFormat>
        <label>ID - Individ Cons. GP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Cons. GP Setup (Monthly)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>